sandbox/output
GildedRoseTest.java:106: error: cannot find symbol
            .map(GildedRose.generateAgedBrieForSellInGreaterThan0());
                           ^
  symbol:   method generateAgedBrieForSellInGreaterThan0()
  location: class GildedRose
GildedRoseTest.java:104: error: cannot find symbol
            .filter(GildedRose.isAgedBrie())
                              ^
  symbol:   method isAgedBrie()
  location: class GildedRose
2 errors
